fix: change gap between buttons in transfer list to 10px

--- a/src/components/transfer-list/transfer-list.scss
+++ b/src/components/transfer-list/transfer-list.scss
@@ -91,7 +91,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4px;
+    gap: 10px;
     flex-shrink: 0;
     align-self: center;
     padding-top: 0;
